# LLM_project

./: .gitignore  README.md  hello.py  pyproject.toml  requiements.txt
.env/: .env.example
src/: main.py
src/API/: api_key.py  gg_ai_studio_api.py  groq_api.py  open_router_api.py
src/model/: llm_models_list.yaml
src/omni_chat/API/: api_key.py  gg_ai_studio_api.py  groq_api.py  open_router_api.py
src/omni_chat/model/: llm_models_list.yaml
src/omni_chat/utils/: argparse.py  color_text.py  text_utils.py
src/utils/: text_utils.py
