[project]
name = "llm-porject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "google-genai>=1.12.1",
    "groq>=0.16.0",
    "openai>=1.61.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]
